<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="preferenceFileName">JTCA_Preferences</string>
    <string name="screenBrightness">ScreenBrightness</string>
    <string name="favoriteAirports">FavoriteAirports</string>
    <string name="favoriteCharts">FavoriteCharts</string>
    <string name="selectedChart">SelectedChart</string>
    <string name="eula_error_title">Error accessing Terms and Conditions</string>
    <string name="eula_error_msg">Unable to download the Terms and Conditions for use of this software. Please try again shortly.</string>
    <string name="cycle_date">Chart Cycle</string>
    <string name="next_issue_date">Next Chart Issue Date</string>
    <string name="manuals_update_date">Last Manuals Update</string>
    <string name="nofavs">No Favorites</string>
    <string name="nonotams">No Change Notices</string>
    <string name="notams">Change Notices</string>
    <string name="notamType">Type:</string>
    <string name="notamEffectivity">Effectivity:</string>
    <string name="notamBeginDate">Begin Date:</string>
    <string name="notamEndDate">End Date:</string>
    <string name="manualsTitle">Manuals</string>
    <string name="companyManualsTitle">Company Manuals</string>
    <string name="airwayManualsTitle">Jeppesen Airway Manuals</string>
    <string name="app_name">JeppTC</string>
    <string name="update_welcome">Updates</string>
    <string name="update_subsrequirement">You must have a current Jeppesen electronic charting subscription in order to use this application.</string>
    <string name="update_sn">Serial Number:</string>
    <string name="update_supportTitle">Jeppesen Support</string>
    <string name="update_supportPacific">Pacific-Americas:</string>
    <string name="update_supportEurope">Europe-China:</string>
    <string name="update_supportEmail">Email: techsupport@jeppesen.com</string>
    <string name="update_supportPacificPhone">303–328–4587</string>
    <string name="update_supportTollFreePhone">Toll–Free: 1–800–732–2800</string>
    <string name="update_supportEuropaPhone">+49 6102 508270</string>
    <string name="update_update">Update</string>
    <string name="update_settings">Jeppesen MobileTC Updates</string>
    <string name="update_charts_status">Charts:</string>
    <string name="update_charts_no_update_needed">Charts are current</string>
    <string name="update_charts_need_update">Charts need updating</string>
    <string name="update_manuals_status">Manuals:</string>
    <string name="update_manuals_checking">Checking for updated manuals…</string>
    <string name="update_manuals_need_update">Updates are ready</string>
    <string name="update_manuals_no_update_needed">Manuals are current</string>
    <string name="update_manuals_none_subscribed">None installed</string>
    <string name="update_manuals_postprocessing">Processing manuals…</string>
    <string name="update_manuals_no_server_response">Unable to contact Jeppesen.com to check for manuals</string>
    <string name="update_coverages_status">Coverages Status:</string>
    <string name="update_coverages_checking">Checking for coverage updates</string>
    <string name="update_coverages_need_update">Updates are ready</string>
    <string name="update_coverages_no_update_needed">Coverages are current</string>
    <string name="update_coverages_downloading">Check status bar for update status</string>
    <string name="update_coverages_select">Select a coverage to load…</string>
    <string name="update_status_updating">Beginning Update…</string>
    <string name="update_status_deleting">Deleting current coverage data…</string>
    <string name="update_status_contacting_lb">Contacting Jeppesen Update Servers…</string>
    <string name="update_status_contacting_updateserver">Contacting Jeppesen Update Server…</string>
    <string name="update_status_activating_device">Activating the device…</string>
    <string name="update_status_checking_for_updates">Checking if you need updates…</string>
    <string name="update_status_packaging_download">"Preparing update… 
(this may take a few minutes)"</string>
    <string name="update_status_notification_title">JeppTC Updating</string>
    <string name="update_status_downloading">Updating…</string>
    <string name="update_status_download_interrupted">Poor Internet connection. Please try again.</string>
    <string name="update_status_merging">Merging Updates…</string>
    <string name="update_status_merging_extras">This may take a few minutes, please remain on this screen to avoid interruption</string>
    <string name="update_status_notification_merging">Merging Updates…</string>
    <string name="update_status_update_complete">Finished!</string>
    <string name="update_status_nothing_happening">Starting Update Service</string>
    <string name="update_status_device_deactivated">Device has been deactivated.</string>
    <string name="update_status_charts_current">Charts are current. No update is necessary.</string>
    <string name="update_status_charts_expired">Your charts are 10+ weeks out of date and cannot be displayed. Please update your charts.</string>
    <string name="update_status_error_generic">An update was interrupted, please try again</string>
    <string name="updates_menu_item">Updates</string>
    <string name="help_menu_item">Help</string>
    <string name="legal_menu_item">Terms and Conditions</string>
    <string name="legal_settings">Jepp Mobile TC Legal</string>
    <string name="copyrightDetails">Copyright © 2013 Jeppesen. All Rights Reserved</string>
    <string name="copyright">Copyright</string>
    <string name="app_eula">Application End User License Agreement</string>
    <string name="data_eula">Data End User License Agreement</string>
    <string name="temporary">Temporary</string>
    <string name="permanent">Permanent</string>
    <string name="immediately">Immediately</string>
    <string name="no_begin_date">No begin date</string>
    <string name="until_further_notice">Until Further Notice</string>
    <string name="no_end_date">No end date</string>
    <string name="update_server_error">Update Server Error</string>
    <string name="connection_problem">Connection Problem</string>
    <string name="update_problem">Update Problem</string>
    <string name="out_of_memory_error">Out Of Memory Error</string>
    <string name="machine_activation">Machine Activation</string>
    <string name="you_must_be_connected_to_the_internet_to_update_your_charts_">You must be connected to the Internet to update your charts.</string>
    <string name="can_t_connect_to_jeppesen_activation_server_contact_jeppesen_technical_support_">"Can't connect to Jeppesen Activation Server.  Contact Jeppesen Technical Support."</string>
    <string name="please_restart_the_application_">Please restart the application.</string>
    <string name="a_problem_was_encountered_unpacking_the_download_file_">A problem was encountered unpacking the download file.</string>
    <string name="error_applying_update">Error applying update</string>
    <string name="invalid_serial_number_please_contact_jeppesen_technical_support_">Invalid serial number. Please contact Jeppesen Technical Support.</string>
    <string name="internal_error">Internal Error</string>
    <string name="please_retry_your_last_operation_">Please retry your last operation.</string>
    <string name="you_have_exceeded_the_number_of_devices_authorized_to_run_jeppesen_mobile_tc_please_contact_jeppesen_support_">You have exceeded the number of devices authorized to run Jeppesen Mobile TC. Please contact Jeppesen Support.</string>
    <string name="unable_to_activate_charts_on_this_machine_contact_jeppesen_technical_support_">Unable to activate charts on this machine. Contact Jeppesen Technical Support.</string>
    <string name="can_t_connect_to_jeppesen_update_server_contact_jeppesen_technical_support_">"Can't connect to Jeppesen Update Server.  Contact Jeppesen Technical Support."</string>
    <string name="network_error">Network Error</string>
    <string name="poor_internet_connection_please_try_again_">Poor Internet connection. Please try again.</string>
    <string name="app_eula_title">Application End User License Agreement</string>
    <string name="data_eula_title">Data End User License Agreement</string>
    <string name="eula_dialog_accept">I Accept</string>
    <string name="eula_dialog_decline">I Decline</string>
    <string name="data_eula_cannot_connect">Unable To Connect</string>
    <string name="data_eula_cannot_connect_message">Please insure that mobile network, or Wi-Fi services in Settings are turned On.</string>
    <string name="general_preferences">General Preferences</string>
    <string name="restore_quick_tips">Restore Quick Tips</string>
    <string name="preferences_menu_item">Preferences</string>
    <string name="preferences">Preferences</string>
    <string name="company_content">Company Content</string>
    <string name="alert_dialog_username">Name:</string>
    <string name="alert_dialog_password">Password:</string>
    <string name="show_ownship_apt_diagram">Display Ownship</string>
    <string name="ownship_summary">Airport diagrams only</string>
    <string name="prefs_turn_off_sleep_mode">Turn Off Sleep Mode</string>
    <string name="prefs_turn_off_sleep_mode_summary">Turning off sleep mode will affect battery life</string>
    <string name="deactivate">Deactivate</string>
    <string name="activation_welcome">Activate Jeppesen Mobile TC</string>
    <string name="activation_name">Name:</string>
    <string name="login_password">Password:</string>
    <string name="airports">Airports</string>
    <string name="search_airports">Search Airports</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="coverages_right_arrow">Coverages ></string>
    <string name="update_available_coverages_list">Update Available Coverages List</string>
    <string name="empty_string">" "</string>
    <string name="select_coverage">Select a coverage:</string>
    <string name="choose_coverage">Choose a coverage you wish to load.</string>
    <string name="are_you_sure">Reset/Deactivate</string>
    <string name="deactivate_serial_number">Resetting will deactivate this device, remove all data and restore all application settings to their default values. Do you still wish to proceed?</string>
    <string name="deactivate_message">Deactivating. Please wait…</string>
    <string name="nomanuals_text">"Manuals are reference information to help you complete your operations library.

Available manuals are located in
Settings > Updates > Manuals"</string>
    <string name="nomanuals">No Manuals</string>
    <string name="about_menu_item">About</string>
    <string name="sitekey">Site Key</string>
    <string name="not_activated">(not activated)</string>
    <string name="version">Version</string>
    <string name="about">About JeppTC</string>
    <string name="terminal_charts">Terminal Charts</string>
    <string name="new_updates_available">New Updates Available</string>
    <string name="gpsstatus">GPS Status</string>
    <string name="gps_time">GPS Time</string>
    <string name="gps_accuracy">Accuracy</string>
    <string name="aircraft_postion">Aircraft Position</string>
    <string name="gps_bearing">Bearing</string>
    <string name="gps_speed">Speed</string>
    <string name="ownship">Ownship</string>
    <string name="rooted">JeppTC will not run on rooted devices</string>
    <string name="not_supported">JeppTC is not supported on this device</string>
</resources>
