<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/noManualsRelativeLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:typeface="sans" android:textStyle="bold" android:gravity="center" android:id="@id/NoManualsHeader" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/manualsTitle" android:layout_alignParentTop="true" />
    <ImageView android:id="@id/nomanuals_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:src="@drawable/nomanuals" android:layout_below="@id/NoManualsHeader" android:layout_centerHorizontal="true" />
    <TextView android:textSize="18.0sp" android:typeface="sans" android:textStyle="bold" android:gravity="center" android:id="@id/NoManualsText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/nomanuals" android:layout_below="@id/nomanuals_image" />
    <TextView android:textSize="13.0sp" android:typeface="sans" android:gravity="center" android:id="@id/NoManualsTextDescription" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/nomanuals_text" android:layout_below="@id/NoManualsText" />
</RelativeLayout>