<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/gpsdataview_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:typeface="sans" android:textStyle="bold" android:gravity="center" android:id="@id/GPSDataHeader" android:background="#ff000000" android:focusable="false" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/gpsstatus" />
    <RelativeLayout android:padding="5.0dip" android:clickable="false" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:animateLayoutChanges="true">
        <TextView android:textSize="18.0sp" android:typeface="sans" android:id="@id/GPSTimeLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gps_time" android:drawableTop="@drawable/vertical_divider_line" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <TextView android:textSize="15.0sp" android:typeface="sans" android:textColor="#ff7d7d7d" android:id="@id/GPSTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_alignBaseline="@id/GPSTimeLabel" android:layout_alignParentRight="true" />
        <TextView android:textSize="18.0sp" android:typeface="sans" android:id="@id/GPSAccuracyLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gps_accuracy" android:drawableTop="@drawable/vertical_divider_line" android:layout_below="@id/GPSTimeLabel" android:layout_alignParentLeft="true" />
        <TextView android:textSize="15.0sp" android:typeface="sans" android:textColor="#ff7d7d7d" android:id="@id/GPSAccuracy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignBaseline="@id/GPSAccuracyLabel" android:layout_alignParentRight="true" />
        <TextView android:textSize="18.0sp" android:typeface="sans" android:id="@id/GPSAircraftPositionLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aircraft_postion" android:drawableTop="@drawable/vertical_divider_line" android:layout_below="@id/GPSAccuracyLabel" android:layout_alignParentLeft="true" />
        <TextView android:textSize="15.0sp" android:typeface="sans" android:textColor="#ff7d7d7d" android:id="@id/GPSAircraftPositionStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_alignBaseline="@id/GPSAircraftPositionLabel" android:layout_alignParentRight="true" />
        <TextView android:textSize="15.0sp" android:typeface="sans" android:textColor="#ff7d7d7d" android:gravity="left" android:id="@id/GPSAircraftPosition" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:layout_below="@id/GPSAircraftPositionLabel" android:layout_alignParentLeft="true" />
        <TextView android:textSize="18.0sp" android:typeface="sans" android:id="@id/GPSBearingLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gps_bearing" android:drawableTop="@drawable/vertical_divider_line" android:layout_below="@id/GPSAircraftPosition" android:layout_alignParentLeft="true" />
        <TextView android:textSize="15.0sp" android:typeface="sans" android:textColor="#ff7d7d7d" android:gravity="right" android:id="@id/GPSBearing" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:layout_alignBaseline="@id/GPSBearingLabel" android:layout_alignParentRight="true" />
        <TextView android:textSize="18.0sp" android:typeface="sans" android:id="@id/GPSSpeedLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gps_speed" android:drawableTop="@drawable/vertical_divider_line" android:layout_below="@id/GPSBearingLabel" android:layout_alignParentLeft="true" />
        <TextView android:textSize="15.0sp" android:typeface="sans" android:textColor="#ff7d7d7d" android:gravity="right" android:id="@id/GPSSpeed" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:layout_alignBaseline="@id/GPSSpeedLabel" android:layout_alignParentRight="true" />
        <TextView android:textSize="18.0sp" android:typeface="sans" android:id="@id/GPSOwnshipLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ownship" android:drawableTop="@drawable/vertical_divider_line" android:layout_below="@id/GPSSpeedLabel" android:layout_alignParentLeft="true" />
        <TextView android:textSize="15.0sp" android:typeface="sans" android:textColor="#ff7d7d7d" android:id="@id/GPSOwnshipStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_alignBaseline="@id/GPSOwnshipLabel" android:layout_alignParentRight="true" />
        <TextView android:textSize="15.0sp" android:typeface="sans" android:textColor="#ff7d7d7d" android:id="@id/GPSOwnship" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:layout_below="@id/GPSOwnshipLabel" android:layout_alignParentLeft="true" />
    </RelativeLayout>
    <View android:id="@id/GPSSpacer" android:layout_width="fill_parent" android:layout_height="10.0dip" />
</LinearLayout>