<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/settingsmenupopup_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:typeface="sans" android:textStyle="bold" android:textColor="#fff6f5f4" android:gravity="center" android:id="@id/settingsmenu_title_text" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings" />
    <View android:id="@id/separate2" android:background="#ff333333" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/settingsmenu_updateicon" android:layout_width="44.0dip" android:layout_height="50.0dip" android:src="@drawable/iconupdates" android:onClick="SettingsOnClick" />
        <TextView android:textSize="18.0sp" android:typeface="sans" android:textStyle="normal" android:textColor="#fff6f5f4" android:id="@id/settingsupdate_text" android:padding="10.0dip" android:clickable="true" android:layout_width="200.0dip" android:layout_height="50.0dip" android:text="@string/updates_menu_item" android:layout_toRightOf="@id/settingsmenu_updateicon" android:onClick="SettingsOnClick" />
        <View android:id="@id/separate1" android:background="#ff333333" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/settingsmenu_updateicon" />
        <ImageView android:id="@id/settingsmenu_preferencesicon" android:layout_width="44.0dip" android:layout_height="50.0dip" android:src="@drawable/icon_preferences" android:layout_below="@id/separate1" android:onClick="PreferencesOnClick" />
        <TextView android:textSize="18.0sp" android:typeface="sans" android:textStyle="normal" android:textColor="#fff6f5f4" android:id="@id/settingspreferences_text" android:padding="10.0dip" android:clickable="true" android:layout_width="200.0dip" android:layout_height="50.0dip" android:text="@string/preferences_menu_item" android:layout_toRightOf="@id/settingsmenu_preferencesicon" android:layout_below="@id/separate1" android:onClick="PreferencesOnClick" />
        <View android:id="@id/separate3" android:background="#ff333333" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/settingsmenu_preferencesicon" />
        <ImageView android:id="@id/settingsmenu_helpicon" android:layout_width="44.0dip" android:layout_height="50.0dip" android:src="@drawable/iconhelp" android:layout_below="@id/separate3" android:onClick="HelpOnClick" />
        <TextView android:textSize="18.0sp" android:typeface="sans" android:textStyle="normal" android:textColor="#fff6f5f4" android:id="@id/settingshelp_text" android:padding="10.0dip" android:clickable="true" android:layout_width="200.0dip" android:layout_height="50.0dip" android:text="@string/help_menu_item" android:layout_toRightOf="@id/settingsmenu_helpicon" android:layout_below="@id/separate3" android:onClick="HelpOnClick" />
        <View android:id="@id/separate4" android:background="#ff333333" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/settingsmenu_helpicon" />
        <ImageView android:id="@id/settingsmenu_abouticon" android:layout_width="44.0dip" android:layout_height="50.0dip" android:src="@drawable/icon_about" android:layout_below="@id/separate4" android:onClick="AboutOnClick" />
        <TextView android:textSize="18.0sp" android:typeface="sans" android:textStyle="normal" android:textColor="#fff6f5f4" android:id="@id/settingsabout_text" android:padding="10.0dip" android:clickable="true" android:layout_width="200.0dip" android:layout_height="50.0dip" android:text="@string/about_menu_item" android:layout_toRightOf="@id/settingsmenu_abouticon" android:layout_below="@id/separate4" android:onClick="AboutOnClick" />
    </RelativeLayout>
</LinearLayout>